

kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from my experiences with the former kwm, which I
originally based on David Hogan's 9wm (a smart and small windowmanager
written in plain C).


In 0.13:
--------
patchlevel 2:
        - some additions to the middle mouse handling to emulate
           the former behaviour with MMB-movement.

patchlevel 1:
        - simplified outline drawing since the previous nifty stippled
           rectangle relied on some graphic hardware support (which
           was not available with all cards). Result: kwm's outline
           drawing (transparent movement of windows) should speed up
           with these cards a lot.


In 0.12:
--------
patchlevel 4:
        - introduced some support for multi-screen displays
        - fixed some drag problems 
        - fixed more drag problems with opaque movement
        - hopefully fixed occasional freezes on certain X-Servers.

patchlevel 3:
        - honours KWM_WIN_ICON_GEOMETRY for iconify/deiconify animation
        - shaped window decorations faster and less flickering
        - border pixmaps fixed names got all a 'wm_' prefix. Name conflicts
		were reported. Sorry for all inconvenient.


patchlevel 2:
        - improved shaped window handling
	- CT: "pinned down" the pixmaps names for titlebar texture 
		and shaped borders. Now the only parameters necessary 
		in kwmrc to make these two features work are

		TitlebarLook=pixmap 
		ShapeMode=on

		The names of the pixmaps are no longer defined in the 
		kwmrc. They are fixed to: top.xpm, bottom.xpm, left.xpm, 
		right.xpm, topleft.xpm, topright.xpm, bottomleft.xpm, 
		bottomright.xpm, activetitlebar.xpm, inactivetitlebar.xpm. 
		All these pixmap s should to be found either in 
		$KDEDIR$/share/apps/kwm/pics/ or in 
		$USER_KDEDIR$ /share/apps/kwm/pics.

		This modification introduces consistancy with the technique 
		used to define titlebar buttons pixmaps and allows simplified