@@ -288,7 +288,7 @@ public:
   void ontoDesktop(int new_desktop);
   // maximize this client. Mode can be 0 (normal), 1 (verically) or 2
   // (horizontal). Store the current geometry in geometry_restore
-  void maximize(int mode = 0);
+  void maximize(int mode = 0, bool animate = True);
   // unmaximize this client. Geometry will be as it was before
   // (geometry_restore)
   void unMaximize();
